[package]
name = "webtric"
version = "0.1.0"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
repository = "https://github.com/acheul/webtric"
description = "Wasm library to handle metric matters"
categories = ["GUI", "WebAssembly", "Web programming"]
keywords = ["resize", "scroll", "sizon"]
readme = "README.md"
license = "MIT"
exclude = [
  "/test-sycamore",
  "/demo-sycamore",
  "/demo-leptos",
  "/docs"
]

[feature]
default = []
sycamore = ["dep:sycamore"]
leptos = ["dep:leptos"]

[dependencies]
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
hashbrown = "0.14.3"
leptos = { version="0.6.11", optional=true }
rawn = "0.1.0"
serde = { version = "1.0.197", features = ["derive"] }
sycamore = { version = "0.9.0-beta.2", features=["suspense"], optional=true }
thiserror = "1.0.58"
wasm-bindgen = "0.2.92"


[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window", "Document", "HtmlDocument", "Element", "Node", "DomRect",
  "HtmlElement", "CssStyleDeclaration", "DomStringMap",
  "Event", "EventTarget", "MouseEvent", "CustomEvent", "CustomEventInit", "PointerEvent",
  "KeyboardEvent",
  "WheelEvent", 
  "AddEventListenerOptions",
  "VisibilityState",
  "HtmlCollection"
]
