[package]
name = "webtric-test"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
hashbrown = "0.14.3"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
sycamore-router = "0.9.0-beta.2"
wasm-bindgen = "0.2.92"
webtric = { path="..", features=["sycamore"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "HtmlElement", "CssStyleDeclaration", "PointerEvent", "DragEvent",
  "EventTarget", "Element"
]

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true