[package]
name = "demo-sycamore"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
hashbrown = "0.14.3"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
wasm-bindgen = "0.2.92"
webtric = { path="..", features=["sycamore"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "HtmlElement", "CssStyleDeclaration", "PointerEvent", "DragEvent",
  "EventTarget", "Element"
]